--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,25 +3,25 @@
     <div class="row banner">
       <div class="container">
         <div class="col-md-6 mtb40">
-          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</h2>
+          <h2><%= t('.guest_main_txt') %></h2>
         </div>
         <div class="col-md-4 col-md-offset-2 mtb40">
-          <h3>Sign up</h3>
+          <h3><%= t('.sign_up') %></h3>
           <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
             <% flash.each do |name, msg| %>
               <%= content_tag :div, msg, class: 'error' if msg.is_a?(String) %>
             <% end %>
             <div class="form-group">
-              <%= f.email_field :email, required: true, class: "form-control", placeholder: "Email" %>
+              <%= f.email_field :email, required: true, class: "form-control", placeholder: t('.email_placeholder') %>
             </div>
             <div class="form-group">
-              <%= f.password_field :password, required: true, class: "form-control", placeholder: "Password" %>
+              <%= f.password_field :password, required: true, class: "form-control", placeholder: t('.password_placeholder') %>
             </div>
             <div class="form-group">
-              <%= f.password_field :password_confirmation, required: true, class: "form-control", placeholder: "Confirm Password" %>
+              <%= f.password_field :password_confirmation, required: true, class: "form-control", placeholder: t('.confirm_password_placeholder') %>
             </div>
             <div class="text-right">
-              <%= f.submit "Start now!", class: "btn btn-danger" %>
+              <%= f.submit t('.button_sign_up'), class: "btn btn-danger" %>
             </div>
           <% end %>
         </div>
@@ -33,29 +33,29 @@
   <div class="container">
     <div class="row mb50">
       <div class="col-md-12">
-        <h2>Benefits</h2>
+        <h2><%= t('.main_txt') %></h2>
       </div>
     </div>
     <div class="row mb50">
       <div class="col-md-3">
         <p><%= image_tag "1.png" %></p>
-        <p>Effective use for your resources</p>
+        <p><%= t('.sentence_resources') %></p>
       </div>
       <div class="col-md-3 ">
         <p><%= image_tag "2.png" %></p>
-        <p>Minimize risks and maximize opportunities</p>
+        <p><%= t('.sentence_risks') %></p>
       </div>
       <div class="col-md-3">
         <p><%= image_tag "3.png" %></p>
-        <p>Align advocacy width other areas and organization goals, both long and short term</p>
+        <p><%= t('.sentence_advocacy') %></p>
       </div>
       <div class="col-md-3">
         <p><%= image_tag "4.png" %></p>
-        <p>Keep track and evaluate your performance</p>
+        <p><%= t('.sentence_keep_track') %></p>
       </div>
     </div>
     <div class="row text_right">
-      <a class="btn btn-danger" href="#" role="button">Demo</a> <a class="btn btn-default" href="#" role="button">I want to read more about it</a>
+      <a class="btn btn-danger" href="#" role="button"><%= t('.button_demo') %></a> <a class="btn btn-default" href="#" role="button"><%= t('.button_read_more') %></a>
     </div>
   </div>
 </div>
@@ -69,8 +69,8 @@
               <%= image_tag "t1.png" %>
             </td>
             <td class="text-right">
-              <p class="cita">Align advocacy width other areas and organization goals, both long and short term</p>
-              <p>UNICEF Ambassador Matt Dawson</p>
+              <p class="cita">“<%= t('.testimony1_txt') %>”</p>
+              <p><%= t('.testimony1_signer') %></p>
             </td>
           </tr>
         </table>
@@ -84,8 +84,8 @@
         <table>
           <tr>
             <td>
-              <p class="cita">“Align advocacy width other areas and organization goals, both long and short term”</p>
-              <p>Unicef Goodwill Ambassador Angélique Kidjo</p></td>
+              <p class="cita">“<%= t('.testimony2_txt') %>”</p>
+              <p><%= t('.testimony2_signer') %></p></td>
             <td>
               <%= image_tag "t2.png" %>
             </td>
@@ -104,8 +104,8 @@
               <%= image_tag "t3.png" %>
             </td>
             <td class="text-right">
-              <p class="cita">Align advocacy width other areas and organization goals, both long and short term</p>
-              <p>UNICEF Ambassador Matt Dawson</p>
+              <p class="cita">“<%= t('.testimony3_txt') %>”</p>
+              <p><%= t('.testimony3_signer') %></p>
             </td>
           </tr>
         </table>
