first implementation of introjs in particular stages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require angular-aside/dist/css/angular-aside
+ *= require intro.js/introjs
  *= require_tree .
  *= require_self
  */
