--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,9 +11,12 @@
 
 <h2><%= @project.title %></h2>
 <p><%= @project.description %></p>
+<button class="btn btn-success" onclick="javascript:introJs().start();">
+  <i class="fa fa-map"></i> <%= t('.guide_me') %>
+</button>
 <hr>
 <div role="tabpanel">
-  <ul class="nav nav-tabs" role="tablist">
+  <ul class="nav nav-tabs" role="tablist" data-step="1" data-intro="<%= t('.step_one') %>">
     <li role="presentation" class="active"><a href="#stages" aria-controls="stages" role="tab" data-toggle="tab"><%= t('.stages') %></a></li>
     <li role="presentation"><a href="#dashboard" aria-controls="dashboard" role="tab" data-toggle="tab"><%= t('.dashboard') %></a></li>
     <li role="presentation"><a href="#documents" aria-controls="documents" role="tab" data-toggle="tab"><%= t('.documents') %></a></li>
@@ -23,7 +26,7 @@
   <!-- tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="stages">
-      <div class="">
+      <div class="" data-step="2" data-intro="<%= t('.step_two') %>">
         <div class="">
           <div class="panel panel-default">
             <div class="panel-heading">
