--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -20,16 +20,21 @@
 
       <h2><%= t('.title') %></h2>
       <p><%= t('.description') %></p>
+
+      <button class="btn btn-success" onclick="javascript:introJs().start();">
+        <i class="fa fa-map"></i> <%= t('.guide_me') %>
+      </button>
+
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
+        <ul class="nav nav-tabs" role="tablist" data-step="1" data-intro="<%= t('.step_one') %>">
           <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
         </ul>
         <!-- tab panes -->
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="data">
-            <div class="bg_grey" id='real-problem'>
+            <div class="bg_grey" id='real-problem' data-step="2" data-intro="<%= t('.step_two') %>">
               <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
               <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
               <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)">{{ btn_problem }}</button>
