--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -20,6 +20,10 @@
       <h2><%= t('.title') %></h2>
       <p><%= t('.description') %></p>
 
+      <button class="btn btn-success" onclick="javascript:introJs().start();">
+        <i class="fa fa-map"></i> <%= t('.guide_me') %>
+      </button>
+
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -31,7 +35,7 @@
 
         <!-- tab panes -->
         <div class="tab-content">
-          <div role="tabpanel" class="tab-pane active" id="data">
+          <div role="tabpanel" class="tab-pane active" id="data" data-step="1" data-intro="<%= t('.step_one') %>" data-position="top">
             <div class="bg_grey">
               <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
               <button type="button" class="btn btn-warning pull-right" ng-click="show_goal()">{{ btn_problem }}</button>
