--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -289,16 +289,16 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="well">
-            <table>
+          <div class="alert alert-danger">
+            <table class="indicator">
               <tr>
                 <td>100</td>
                 <td>Actividades vencidas</td>
               </tr>
             </table>
           </div>
-          <div class="well">
-            <table>
+          <div class="alert alert-warning">
+            <table class="indicator">
               <tr>
                 <td>250</td>
                 <td>Actividades sin finalizar</td>
