--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,13 @@
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Vizard Rails" %>">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- INICIO GRAFICOS -->
+    <!-- css dashboard graphics -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    <link rel="stylesheet" href="/assets/css/circle.css">
-    <!-- FIN GRAFICOS -->
+    <!-- end css dashboard graphics -->
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <!-- INICIO GRAFICOS -->
+    <!-- js dashboard graphics -->
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <!-- FIN GRAFICOS -->
+    <!-- end js dashboard graphics -->
     <script src="//cdn.datatables.net/1.10.5/js/jquery.dataTables.min.js"></script>
     <script>
       $(function () {
