Added link style to Activity indicator link icon

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -30,7 +30,7 @@ input, button, select, textarea {
 select {
   padding: 5px;
 }
-table .fa-pencil-square-o, table .fa-trash {
+table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart {
   color: #0091EA;
   cursor: pointer;
 }
