--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -62,7 +62,7 @@
                     </td>
                     <td class="text-right">
                       <i class="fa fa-pencil-square-o" ng-click="add_edit_activity(activity)" title="Edit"></i>
-                      <i class="fa fa-line-chart" ng-click="add_edit_indicator(activity)"></i>
+                      <i class="fa fa-line-chart" ng-click="add_edit_indicator(activity)" title="Indicators"></i>
                       <i class="fa fa-trash" ng-click="delete_activity(activity)" title="Delete"></i>
                     </td>
                   </tr>
