Added link to trello

--- a/app/views/outcomes/stage5.html.erb
+++ b/app/views/outcomes/stage5.html.erb
@@ -52,7 +52,7 @@
 					<div class="bg_grey">
 						<h4>How to organize the activities?</h4>
 						<p>
-							For planning and coordination purposes it is useful to place the activities in Trello.
+							For planning and coordination purposes it is useful to place the activities in Trello. Trello integration will be available soon.
 						</p>
 						<a href="#" target="_self" class="btn btn-warning"><i class="fa fa-calendar"></i> Organize in Trello</a>
 					</div>
