--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="row text_right">
-      <a class="btn btn-danger" id="startButton" href="/demo/?multipage=true#public" target="_self" role="button"><%= t('.button_demo') %></a>
+      <a class="btn btn-danger" id="startButton" href="/demo/?tour=true" target="_self" role="button"><%= t('.button_demo') %></a>
       <a class="btn btn-default" href="#" role="button"><%= t('.button_read_more') %></a>
     </div>
   </div>
