Implemented overview (eye) functionality on projects for visiting users

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -42,7 +42,7 @@
                 <i class="fa fa-gears" ng-click="add_edit_project(project)" ng-if="project.permission == 'owner'"></i>
                 <i class="fa fa-user-plus" ng-click="user_permission(project)" ng-if="project.permission == 'owner'"></i>
                 <a href="/projects/{{ project.id }}" target="_self"><i class="fa fa-edit"></i></a>
-                <i class="fa fa-eye" ng-click=""></i>
+                <a href="/projects/{{ project.id }}/overview" target="_self"><i class="fa fa-eye"></i></a>
                 <i class="fa fa-trash" ng-click="delete_project(project)" ng-if="project.permission == 'owner'"></i>
               </td>
             </tr>
