Project index - fixed :eyes: link

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -35,8 +35,8 @@
           </thead>
           <tbody>
             <tr title="{{ project.description | limitTo: 140 }}" ng-repeat="project in projects">
-              <td><a href="/projects/{{ project.id }}" ng-if="project.permission == 'owner'" target="_self">{{ project.title }}</a>
-              <a href="/projects/{{ project.id }}" ng-if="project.permission == 'collaborator'" target="_self">{{ project.title }}</a></td>
+              <td><a href="/projects/{{ project.id }}" target="_self">{{ project.title }}</a>
+              </td>
               <td>{{ project.focus_area }}</td>
               <td class="controllers">
                 <i class="fa fa-globe" ng-if="project.public" title="<%= t('.public') %>"></i>
@@ -62,10 +62,10 @@
           </thead>
           <tbody>
             <tr title="{{ project.description | limitTo: 140 }}" ng-repeat="project in public_projects">
-              <td><a href="/projects/{{ project.id }}" target="_self">{{ project.title }}</a></td>
+              <td><a href="/projects/{{ project.id }}/overview" target="_self">{{ project.title }}</a></td>
               <td>{{ project.focus_area }}</td>
               <td class="controllers">
-                <i class="fa fa-eye" ng-click=""></i>
+                <a href="/projects/{{ project.id }}/overview" target="_self"><i class="fa fa-eye"></i></a>
               </td>
             </tr>
           </tbody>
