--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -1,50 +1,58 @@
 <div class="">
   <div class="">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#overviewstage1" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> Stage 1: Articulate problems and policy solutions</a></h4>
-      </div>
+    <div class="project-hero">
+      <h2><%= @project.title %></h2>
+      <p><%= @project.description %></p>
+    </div>
+    <div class="project-content">
 
-      <div class="collapse steps" id="overviewstage1">
-        <table class="table">
+      <div>
+        <div>
           <!-- real problem -->
           <% if !@real_problem %>
             <p><%= t('.empty') %></p>
           <% else %>
-            <div>
-              <h1>Real problem</h1>
-              <b>title: </b><%= @real_problem.title.presence || t('.empty') %>
+            <div class="box">
+              <div class="label label-default">Real problem</div>
+              <h3><%= @real_problem.title.presence || t('.empty') %></h3>
+              <p><%= @real_problem.description.presence || t('.empty') %></p>
+              <ul>
+                <li>
+                  Focus area: <%= @real_problem.focus_area.presence || t('.empty') %>
+                </li>
+                <li>
+                  Goal: <%= @real_problem.goal.presence || t('.empty') %>
+                </li>
+              </ul>
               </br>
-              <b>description: </b><%= @real_problem.description.presence || t('.empty') %>
-              </br>
-              <b>focus area: </b><%= @real_problem.focus_area.presence || t('.empty') %>
-              </br>
-              <b>goal: </b><%= @real_problem.goal.presence || t('.empty') %>
             </div>
             <!-- policy problems -->
-            <div>
-              <h2>Policy problems (<%= @policy_problems ? @policy_problems.count.presence : "" %>)</h2>
+            <div class="box">
+              <div class="label label-default">Policy problems (<%= @policy_problems ? @policy_problems.count.presence : "" %>)</div>
               <% if @policy_problems.nil? %>
                 <p><%= t('.uncreated') %></p>
               <% elsif @policy_problems.count < 1 %>
                 <p><%= t('.empty') %></p>
               <% else %>
                 <% @policy_problems.each do |policy| %>
-                  <b>title: </b><%= policy.title %>
-                  <!-- solutions -->
-                  <div>
-                    <h3>Solutions (<%= policy.solutions.count.presence || "" %>)</h3>
-                    <% if @solutions.nil? %>
-                      <p><%= t('.uncreated') %></p>
-                    <% elsif @solutions.count < 1 %>
-                      <p><%= t('.empty') %></p>
-                    <% else %>
-                      <% policy.solutions.each do |solution| %>
-                        <b>title: </b><%= solution.title.presence || t('.empty') %>
-                        </br>
+                  <ol type="1">
+                    <h4><li><%= policy.title %></li></h4>
+                    <!-- solutions -->
+                    <div>
+                      <b>Solutions</b>
+                      <ul style="list-style-type:disc">
+                        <% if @solutions.nil? %>
+                          <p><%= t('.uncreated') %></p>
+                        <% elsif @solutions.count < 1 %>
+                          <p><%= t('.empty') %></p>
+                        <% else %>
+                          <% policy.solutions.each do |solution| %>
+                            <li><span class='blue'>sol: </span><%= solution.title.presence || t('.empty') %></li>
+                          <% end %>
+                      </ul>
                       <% end %>
-                    <% end %>
-                  </div>
+                    </div>
+                  </ol>
                   <!-- end solutions -->
                   </br>
                 <% end %>
@@ -53,11 +61,11 @@
             <!-- end policy problems -->
           <% end %>
           <!-- end real problem -->
-        </table>
+        </div>
       </div>
       </br>
-      <div class="panel-heading">
-        <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#overviewstage3" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> Stage 3: Set Goals</a></h4>
+      <div>
+        <h4 class="panel-title" title="Complete Stage"><i class="<%= icon_class_stage 1 %>"></i> Stage 3: Set Goals</h4>
       </div>
       <div class="collapse steps" id="overviewstage3">
         <table class="table">
