--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -49,7 +49,7 @@
                     <td>{{outcome.description}}</td>
                     <td>{{outcome.outcome_type_id}}</td>
                     <td>{{outcome.actor_type_id}}</td>
-                    <td></td>
+                    <td>{{outcome.no_activities}}</td>
                     <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a></td>
                   </tr>
                 </tbody>
