--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="addNew col-md-12 text-right">
-      <button class="btn btn-warning" ng-click="add_edit_project()">
+      <button class="btn btn-warning" ng-click="add_edit_project()" data-step="1" data-intro="<%= t('.step_one') %>">
         <i class="fa fa-plus-circle"></i> <%= t('.new_project') %>
       </button>
       <button class="btn btn-success" onclick="javascript:introJs().start();">
@@ -13,7 +13,7 @@
   </div>
 
   <div role="tabpanel">
-    <ul class="nav nav-tabs" role="tablist" data-step="1" data-intro="<%= t('.step_one') %>">
+    <ul class="nav nav-tabs" role="tablist" data-step="2" data-intro="<%= t('.step_two') %>">
       <li role="presentation" class="active">
         <a href="#private" aria-controls="private" role="tab" data-toggle="tab"><%= t('.my_projects') %></a>
       </li>
@@ -28,7 +28,7 @@
           <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           {{ messages.message }}
         </div>
-        <table class="table table-stripped">
+        <table class="table table-stripped" data-step="3" data-intro="<%= t('.step_three') %>">
           <thead>
             <tr>
               <th width="60%"><%= t('.project') %></th>
@@ -40,7 +40,7 @@
             <tr title="{{ project.description | limitTo: 140 }}" ng-repeat="project in projects">
               <td><a href="/projects/{{ project.id }}" target="_self">{{ project.title }}</a></td>
               <td>{{ project.focus_area }}</td>
-              <td class="controllers" data-step="2" data-intro="<%= t('.step_two') %>">
+              <td class="controllers">
                 <i class="fa fa-globe" ng-if="project.public" title="<%= t('.public') %>"></i>
                 <i class="fa fa-gears" ng-click="add_edit_project(project)" ng-if="project.permission == 'owner'"></i>
                 <i class="fa fa-user-plus" ng-click="user_permission(project)" ng-if="project.permission == 'owner'"></i>
