--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -555,6 +555,8 @@ table.indicator td:first-child {
 
 .separator {
     border-top: 1px solid #F3F3F3;
+    padding: 10px 0;
+    margin-top: 30px;
 }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
@@ -580,7 +582,7 @@ table.indicator td:first-child {
     border-radius: 0px 0px 6px 6px;
 }
 
-span.blue {
+.blue {
   font-weight: 800;
   color: #00A4EE;
 }
