--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
       <label for="scheduling"><%= t('.scheduling') %> (current: {{current_activity.scheduling | date:'MM/dd/yyyy'}})</label>
-      <input type="date" name="scheduling" class="form-control" ng-model="current_activity.scheduling" value="{{current_activity.scheduling}}"></input>
+      <input type="date" name="scheduling" class="form-control" ng-model="current_activity.scheduling" placeholder="2000/12/24" min="1900-01-01"></input>
     </div>
     <div class="form-group">
       <label for="outcome"><%= t('.outcome') %></label>
