--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,8 +9,6 @@
   </div>
 <% end %>
 
-<h2><%= @project.title %></h2>
-<p><%= @project.description %></p>
 <hr>
 <div role="tabpanel">
   <ul class="nav nav-tabs" role="tablist">
@@ -25,11 +23,15 @@
     <div role="tabpanel" class="tab-pane active" id="stages">
       <div class="">
         <div class="">
+          <div class="project-hero">
+            <h2><%= @project.title %></h2>
+            <p><%= @project.description %></p>
+          </div>
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> <%= t('.stage1_title') %></a></h4>
+              <h4 class="panel-title" title="Complete Stage"><i class="<%= icon_class_stage 1 %>"></i> <%= t('.stage1_title') %></h4>
             </div>
-            <div class="collapse steps" id="stage1">
+            <div id="stage1">
               <table class="table">
                   <tbody>
                     <!-- real problem -->
